image path update.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <nav class="nav-bar">
       <a href="#" class="logo">
-        <img src="/image/NavigatePower-H-white 4logo.png" alt="NavigatePower Logo">
+        <img src="../image/NavigatePower-H-white 4logo.png" alt="NavigatePower Logo">
 
       </a>
       <ul class="nav-menu justify-content-md-center align-items-md-center">
@@ -157,7 +157,7 @@
             </a></li>
         </div>
         <li><a href="#">CONTACT US</a></li>
-        <li><button class="login-btn"><img src="/image/lock-iconlogin.png" alt="" width="14" height="14"> LOGIN</button>
+        <li><button class="login-btn"><img src="../image/lock-iconlogin.png" alt="" width="14" height="14"> LOGIN</button>
         </li>
       </ul>
       <div class="menu-icon">☰</div>
@@ -165,7 +165,7 @@
     </nav>
 
     <div class="hero-banner-title d-flex justify-content-center align-items-center">
-      <h2>Helping businesses control <br>energy cost <br><img src="/image/arrow-down-s-linedropdown.png" alt=""></h2>
+      <h2>Helping businesses control <br>energy cost <br><img src="../image/arrow-down-s-linedropdown.png" alt=""></h2>
     </div>
   </div>
 
@@ -181,7 +181,7 @@
 
       </div>
     </div>
-    <img src="/image/Who-We-Are.png" alt="Team of professionals in a meeting" class="main-image img-fluid mt-5">
+    <img src="../image/Who-We-Are.png" alt="Team of professionals in a meeting" class="main-image img-fluid mt-5">
   </section>
 
 
