--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <nav class="nav-bar">
       <a href="#" class="logo">
-        <img src="image/NavigatePower-H-white 4logo.png" alt="NavigatePower Logo">
+        <img src="image/NavigatePower-H-white-4logo.png" alt="NavigatePower Logo">
 
       </a>
       <ul class="nav-menu justify-content-md-center align-items-md-center">
