--- a/index.html
+++ b/index.html
@@ -2,195 +2,138 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/site.css">
-  <title>Power Navigate</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    </link>
+    <link rel="stylesheet" href="css/site.css">
+    <title>Navigator Power</title>
 </head>
-
-
-<!-- <style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: Arial, sans-serif;
-  }
-
-  .top-bar {
-    background-color: #3b5998;
-    color: white;
-    padding: 5px 20px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .top-bar a {
-    color: white;
-    text-decoration: none;
-    margin-left: 15px;
-  }
-
-  .nav-bar {
-    background-color: black;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .logo {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-  }
-
-  .logo img {
-    width: 30px;
-    margin-right: 10px;
-  }
-
-  .nav-menu {
-    display: flex;
-    list-style-type: none;
-  }
-
-  .nav-menu li {
-    margin-left: 20px;
-  }
-
-  .nav-menu a {
-    color: white;
-    text-decoration: none;
-    font-size: 14px;
-  }
-
-  .login-btn {
-    background-color: transparent;
-    border: 1px solid white;
-    color: white;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-
-  .menu-icon {
-    display: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-  }
-
-  @media (max-width: 768px) {
-    .top-bar {
-      display: none;
-    }
-
-    .nav-menu {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      right: 0;
-      background-color: black;
-    }
-
-    .nav-menu.active {
-      display: flex;
-    }
-
-    .nav-menu li {
-      margin: 10px 20px;
-    }
-
-    .menu-icon {
-      display: block;
-    }
-  }
-</style> -->
 
 <body>
 
-  <!-- top bar start  -->
-  <div class="top-bar">
-    <a href="tel:888.601.1780">888.601.1780</a>
-    <a href="mailto:info@navigatepower.com">info@navigatepower.com</a>
-    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-  </div>
-  <!-- top bar End  -->
+    <div class="secondary-nav bg-blue d-sm-block d-none">
+        <div class="container">
+            <div class="row">
 
-  <!-- hero-banner start  -->
-  <div class="hero-banner">
+                <ul class="navbar-nav navigation flex-row align-items-center justify-content-end">
+                    <li class="nav-item">
+                        <a href="tel:888.601.1780" class="nav-link"><img src="/image/phone.png" alt="" width="22">
+                            &nbsp;&nbsp;888.601.1780 </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="mailto:info@navigatepower.com" class="nav-link"> <img src="/image/email.png" alt=""
+                                width="22">
+                            &nbsp;&nbsp;info@navigatepower.com </a>
+                    </li>
+                    <!-- <li class="nav-item">
+                            <a href="#"><img src="/image/facebook.png" alt="" width="30"></a>
+                        </li> -->
+                    <li class="nav-item">
+                        <a href="#"><img src="/image/linked-in.png" alt="" width="22" class="me-1"></a>
+                        <a href="#"><img src="/image/facebook.png" alt="" width="22"></a>
+                    </li>
+                </ul>
 
-    <nav class="nav-bar">
-      <a href="#" class="logo">
-        <img src="image/NavigatePower-H-white-4logo.png" alt="NavigatePower Logo">
+                <!-- <a href="#"><img src="/image/linked-in.png" alt="" width="30"></a> -->
 
-      </a>
-      <ul class="nav-menu justify-content-md-center align-items-md-center">
-        <li><a href="#">ABOUT US</a></li>
-        <div class="dropdown">
-          <li><a href="#">ENERGY SERVICES ▼
-              <ul class="dropdown-menu">
-                <li><a href="#">page</a></li>
-
-              </ul>
-            </a></li>
+            </div>
         </div>
-        <li><a href="#">BECOME AN ENERGY CONSULTANT</a></li>
-        <div class="dropdown">
-          <li><a href="#">Resources ▼
-              <ul class="dropdown-menu">
-                <li><a href="#">page</a></li>
 
-              </ul>
-            </a></li>
+    </div>
+
+    <!-- Secondary Nav End  -->
+    <header id="primary-menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container pt-md-0 pt-3">
+                <a class="navbar-brand" href="#"><img src="/image/NavigatePower-H-white 4logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">about us</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                energy service
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                become and energy consultant
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">resources</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"> <img src="/image/lock-icon.png" alt="" width="13">
+                                &nbsp;login</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        <div class="container d-flex justify-content-center">
+            <div class="row">
+                <div class="h1">
+                    <h1>Helping businesses control<br class="d-md-block d-none"> energy cost</h1>
+                    <h2><img src="/image/arrow-down-s-linedropdown.png" alt=""></h2>
+                </div>
+
+            </div>
         </div>
-        <li><a href="#">CONTACT US</a></li>
-        <li><button class="login-btn"><img src="image/lock-iconlogin.png" alt="" width="14" height="14"> LOGIN</button>
-        </li>
-      </ul>
-      <div class="menu-icon">☰</div>
 
-    </nav>
+    </header>
 
-    <div class="hero-banner-title d-flex justify-content-center align-items-center">
-      <h2>Helping businesses control <br>energy cost <br><img src="image/arrow-down-s-linedropdown.png" alt=""></h2>
-    </div>
-  </div>
+    <!-- Header End  -->
 
-  <!-- hero-banner end  -->
+    <section id="who-we-are">
+        <div class="container">
+            <div class="row text-center">
+                <h2>who we are</h2>
+                <p>An energy broker firm that utilizes industry expertise and strategic relationships to offer low-cost
+                    energy solutions
+                    and higher profitability</p>
+            </div>
+            <div class="row">
+                <div class="who-img">
 
-  <section class="who-we-are">
-    <div class="container">
-      <div class="row text-center">
-        <h2>WHO WE ARE</h2>
-        <p class="description">An energy broker firm that utilizes industry expertise and strategic relationships to
-          offer
-          low-cost energy solutions and higher profitability</p>
-
-      </div>
-    </div>
-    <img src="image/Who-We-Are.png" alt="Team of professionals in a meeting" class="main-image img-fluid mt-5">
-  </section>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="js/style.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
